<resources>
    <string name="app_name" translatable="false">Ideal Master</string>
    <string name="sign_in">Sign In</string>
    <string name="imex_group" translatable="false">2017 IMEX Group CO LTD</string>
    <string name="all_right_reserved" translatable="false">All rights reserved</string>
    <string name="welcome">WELCOME</string>
    <string name="master">MASTER</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="new_orders">New Orders</string>
    <string name="my_orders">My Orders</string>
    <string name="finished_orders">Finished Orders</string>
    <string name="new_order">New Order</string>
    <string name="order_was_started">Order was Started</string>
    <string name="order_was_paused">Order was Paused</string>
    <string name="order_was_finished">Order was Finished</string>
    <string name="order_was_offered">Order was Offered</string>
    <string name="order_was_canceled">Order was Canceled</string>
    <string name="pause_request_sent">Pause Request was sent</string>
    <string name="take_request_sent">Your offer was sent to client</string>
    <string name="accept_request_sent">You have accepted this invitation</string>
    <string name="finish_request_sent">Finish Request was sent</string>
    <string name="details">Details</string>
    <string name="order">Order</string>
    <string name="take">Take</string>
    <string name="accept">Accept</string>
    <string name="pause">Pause</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="decline">Decline</string>
    <string name="more">More</string>
    <string name="ok">OK</string>
    <string name="not_taken">Not Taken</string>
    <string name="started">Started</string>
    <string name="paused">Paused</string>
    <string name="canceled">Canceled</string>
    <string name="finished">Finished</string>
    <string name="waiting_finished">Waiting Finished</string>
    <string name="waiting_paused">Waiting Paused</string>
    <string name="waiting_favorite">Waiting Favorite</string>
    <string name="cost">Cost</string>
    <string name="transactions_list">Transactions</string>
    <string name="to">To</string>
    <string name="time">Time</string>
    <string name="transactions">Transactions</string>
    <string name="certificate">Ideal Certificate</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="pricing">Pricing</string>
    <string name="profile">Profile</string>
    <string name="cost_formatted">%d AMD</string>
    <string name="settings">Settings</string>
    <string name="error">Error</string>
    <string name="no_orders">No orders to show</string>
    <string name="no_transactions">No transactions to show</string>
    <string name="portfolio">Portfolio</string>
    <string name="rating">Rating</string>

    <string name="network_issue">Network Issue. Please, check your connection.</string>
    <string name="server_issue">Server Issue. If you keep getting this issue, please contact us.</string>
    <string name="wrong_data">Wrong Data. If you keep getting this issue, please contact us.</string>
    <string name="order_was_started_long">Your order has been started and you can begin your work. Good luck!</string>
    <string name="order_was_canceled_long">Your order has been canceled.</string>
    <string name="order_was_paused_long">Your order has been paused and you can rest now. Cheers!</string>
    <string name="accept_request_sent_long">You have accepted this invitation. Congratulation!</string>
    <string name="order_was_finished_long">Your order has been finished. Congratulation!</string>
    <string name="order_was_offered_long">Order was offered for you. Congratulation!</string>
    <string name="pause_request_sent_long">Pause request was sent to client to approve. Please, be patient.</string>
    <string name="finish_request_sent_long">Finish Request was sent to client. Please, wait until client approves the finish request.</string>
    <string name="take_request_sent_long">Your offer was sent to client. Please, be patient and wait for response.</string>
    <string name="username_password_not_empty">Both username and password must not be empty.</string>

    <string name="icon_username" translatable="false">&#xe90a;</string>
    <string name="icon_lock" translatable="false">&#xe90b;</string>
    <string name="icon_back" translatable="false">&#xe91f;</string>
    <string name="icon_calendar" translatable="false">&#xe906;</string>
    <string name="icon_marker" translatable="false">&#xe905;</string>
    <string name="icon_details" translatable="false">&#xe904;</string>
    <string name="icon_cost" translatable="false">&#xe902;</string>
    <string name="icon_person" translatable="false">&#xe903;</string>
    <string name="icon_clock" translatable="false">&#xe901;</string>
    <string name="icon_comment" translatable="false">&#xe900;</string>
    <string name="icon_star" translatable="false">&#xe912;</string>
    <string name="icon_empty_star" translatable="false">&#xe913;</string>
    <string name="icon_world" translatable="false">&#xe929;</string>
    <string name="icon_portfolio" translatable="false">&#xe940;</string>
    <string name="icon_birthday" translatable="false">&#xe909;</string>
    <string name="icon_gender" translatable="false">&#xe908;</string>
    <string name="icon_certificate" translatable="false">&#xe907;</string>
    <string name="icon_triangle" translatable="false">&#xe941;</string>
    <string name="language">Language</string>
    <string name="english" translatable="false">English</string>
    <string name="armenian" translatable="false">Հայերեն</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="select_your_language">Select Your Language</string>
    <string name="user_has_no_phone">User has not provided a phone number</string>

    <string name="payment_type">P.type</string>
    <string name="status">Status</string>
    <string name="cant_take_order">Can\'t Take Order</string>
    <string name="already_granted">This order is already granted to another master or canceled</string>
    <string name="already_taken">You have already taken this order</string>
    <string name="amd">AMD</string>

    <string-array name="menu_icons" translatable="false">
        <item>&#xe910;</item>
        <item>&#xe911;</item>
        <item>&#xe90f;</item>
        <item>&#xe90E;</item>
        <item>&#xe90C;</item>
        <item>&#xe90D;</item>
    </string-array>

    <string-array name="menu_titles">
        <item>New Orders</item>
        <item>My Orders</item>
        <item>Finished Orders</item>
        <item>Transactions</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

    <string-array name="menu_dashes" translatable="false">
        <item>#FFD801</item>
        <item>#2094FA</item>
        <item>#8C88FF</item>
        <item>#FCAB53</item>
        <item>#0DEC6D</item>
        <item>#FF3366</item>
    </string-array>
    <string name="account_blocked">Your profile has been blocked</string>
    <string name="account_blocked_or_session_expired">Your session has been expired or your profile has been blocked</string>
    <string name="order_is_canceled">This order is canceled</string>
    <string name="turn_on_gps">GPS is off. Please, turn it on.</string>

</resources>
