<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.flycode.paradoxidealmaster.activities.LoginActivity">

    <com.flycode.paradoxidealmaster.views.FullScreenImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/login_background"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="100dp"
                android:src="@drawable/big_logo"/>

            <com.flycode.paradoxidealmaster.views.CustomTextView
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/welcome"
                android:textSize="22sp"
                android:textColor="@color/black"/>

            <com.flycode.paradoxidealmaster.views.CustomTextView
                android:id="@+id/master"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_horizontal"
                android:text="@string/master"
                android:textColor="@color/black"/>

            <View
                android:layout_width="30dp"
                android:layout_height="5dp"
                android:layout_marginBottom="50dp"
                android:background="@color/yellow"/>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:background="@color/white"
                card_view:cardPreventCornerOverlap="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.flycode.paradoxidealmaster.views.CustomTextView
                            android:id="@+id/icon_username"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="30dp"
                            android:text="@string/icon_username"
                            android:textColor="@color/darken_grey"
                            android:textSize="15sp"/>

                        <com.flycode.paradoxidealmaster.views.CustomEditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"
                            android:gravity="center_horizontal"
                            android:background="@android:color/transparent"
                            android:hint="@string/name"
                            android:singleLine="true"/>

                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider_grey"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/icon_lock"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="30dp"
                            android:text="@string/icon_lock"
                            android:textColor="@color/darken_grey"
                            android:textSize="15sp"/>

                        <com.flycode.paradoxidealmaster.views.CustomEditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_margin="10dp"
                            android:gravity="center_horizontal"
                            android:background="@android:color/transparent"
                            android:hint="@string/password"
                            android:inputType="textPassword"/>

                    </RelativeLayout>

                    <com.flycode.paradoxidealmaster.views.CustomButton
                        android:id="@+id/sign_in"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:textSize="22sp"
                        android:background="@color/ideal_red"
                        android:textColor="@color/white"
                        android:textAllCaps="false"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
